--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "fabiankoehnen/website-price-crawler",
+    "version": "1.3.0",
     "autoload": {
         "psr-4": {
             "App\\": "src/"
