--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,5 +40,5 @@ jobs:
                 with:
                     repo_token: ${{ secrets.GITHUB_TOKEN }}
                     tag: ${{steps.release.outputs.version}}
-                    file: test.txt
+                    file: app.phar
 
