--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,16 @@
         "guzzlehttp/guzzle": "^7.4"
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.7"
+        "phpstan/phpstan": "^1.7",
+        "friendsofphp/php-cs-fixer": "^3.0"
+    },
+    "scripts": {
+        "check": [
+            "@cs-check",
+            "@stan"
+        ],
+        "cs-check": "vendor/bin/php-cs-fixer fix . --dry-run --rules=@Symfony --diff",
+        "cs-fix": "vendor/bin/php-cs-fixer fix . --rules=@Symfony",
+        "stan": "vendor/bin/phpstan analyse -c phpstan.neon"
     }
 }
